# veye_viewer

./: .gitignore  AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  Camera.cpp  Camera.h  Capture.cpp  Capture.h  CaptureMPlane.cpp  CaptureMPlane.h  CaptureSPlane.cpp  CaptureSPlane.h  CodeMap.cpp  CodeMap.h  CommHeader.h  CommStuct.h  CurAttrDlg.cpp  CurAttrDlg.h  CurAttrDlg.ui  ExpGainDlg.cpp  ExpGainDlg.h  ExpGainDlg.ui  FramelessWidget.cpp  FramelessWidget.h  ImgAttrDlg.cpp  ImgAttrDlg.h  ImgAttrDlg.ui  ImgProcDlg.cpp  ImgProcDlg.h  ImgProcDlg.ui  LICENSE  Main.cpp  MainWidget.cpp  MainWidget.h  MainWidget.ui  MsgBox.cpp  MsgBox.h  OperateCmd.cpp  OperateCmd.h  QxHelp.cpp  (+72 more)
.github/workflows/: sync-to-gitee.yml
config/: auto_camera_index.json  config_camera-rpi5.sh  gx_register.json  mv_register.json  platform.json  probe_camera_info-jetson.sh  probe_camera_info-rk.sh  probe_camera_info-rpi.sh  probe_camera_info-rpi5.sh  start_veye_viewer.sh  syscfg.json  veye_viewer_en_US.qm  veye_viewer_en_US.ts  veye_viewer_zh_CN.ts
image/: app.qss
json/: reader.h
